# graph_rag_poc

./: .dockerignore  .env.example  AGENTS.md  Dockerfile.api  Dockerfile.ui  PLAN.md  README.md  docker-compose.yml  graph_rag_poc.md  pyproject.toml
docs/: actor_critic_workflow.md
scripts/: smoke_test.sh
services/api/: main.py
services/ui/: app.py
src/graph_rag_poc/: __init__.py  answering.py  api_models.py  config.py  graph_store.py  logging_utils.py  models.py  retrieval.py  seed_data.py  service.py
tests/: test_api.py  test_retrieval.py
